--- a/public/css/loginregis.css
+++ b/public/css/loginregis.css
@@ -1,17 +1,28 @@
+        html, body {
+            height: 100%;
+            margin: 0;
+        }
+
         body {
             background-color: #cccccc;
             background-image:url('../ads&buzz home image 60 ocp.jpg');
             background-repeat:no-repeat;/*we want to have one single image not a repeated one*/  
             background-size:cover;
         }
+
+        .container {
+            min-height: 100%; 
+        }
+
         .balon {
-            display: block;
-            position: relative;
-            top: 20%;
-            margin: auto;
+            position: absolute;
+            top: 50%;
+            left: 50%;
+            transform: translate(-50%,-50%);
             margin-bottom: 25%;
             max-width: 80%;
         }
+
         .loginbox {
             display: block;
             position: relative;
