--- a/public/css/loginregis.css
+++ b/public/css/loginregis.css
@@ -12,7 +12,8 @@
 
         .container {
             position: relative;
-            
+            width:100%;
+            height: 100%;
         }
 
         .row {
@@ -21,14 +22,15 @@
             left: 50%;
             width: 80%;
             transform: translate(-50%,-50%);
-        }
+        }   
 
         .balon {
             margin-bottom: 25%;
+            margin-top: 25%;
             margin-right: 0px;
             margin-left: 0px;
-            max-width: 80%;
-            min-height: 100%; 
+            max-width: 100%;
+            height: auto; 
         }
 
         .loginbox {
@@ -37,7 +39,8 @@
             top: 20%;
             margin: auto;
             margin-bottom: 10%;
-            max-width: 70%;
+            margin-top: 25%;
+            max-width: 100%;
         }
         .regbox {
             display: block;
