--- a/css/loginregis.css
+++ b/css/loginregis.css
@@ -54,6 +54,12 @@
             max-width: 90%;
         }
 
+        .resetbox {
+            margin-top: 44%;
+            margin-left: 5%;
+            max-width: 90%;
+        }
+
         @media only screen and (max-width: 600px) {
           .boxcont {
             padding-left:30px;    
@@ -61,6 +67,10 @@
           
           .baloncont {
             padding-right:0px;
+          }
+
+          .resetbox {
+            margin-bottom: 10%;
           }
 
           .row {
