--- a/public/css/loginregis.css
+++ b/public/css/loginregis.css
@@ -13,14 +13,14 @@
         .container {
             position: relative;
             width:100%;
-            height: 100%;
+            height:100%;
         }
 
         .row {
             position: absolute;
             top: 50%;
             left: 50%;
-            width: 80%;
+            width: 89%;
             transform: translate(-50%,-50%);
         }   
 
@@ -31,29 +31,37 @@
         .balon {
             margin-bottom: 25%;
             margin-top: 25%;
-            margin-right: 0px;
-            margin-left: 0px;
-            max-width: 100%;
-            height: auto; 
+            margin-left: 5%;
+            max-width: 90%;
         }
 
-        .loginboxcont {
+        .boxcont {
           height: 80%; 
           padding-left:120px;
         }
 
         .loginbox {
-            display: block;
-            position: relative;
-            top: 20%;
-            margin: auto;
             margin-bottom: 10%;
             margin-top: 25%;
-            max-width: 100%;
+            margin-left: 5%;
+            max-width: 90%;
+        }
+
+        .regbox {
+            margin-bottom: 10%;
+            margin-top: 8%;
+            margin-left: 5%;
+            max-width: 90%;
+        }
+
+        .resetbox {
+            margin-top: 44%;
+            margin-left: 5%;
+            max-width: 90%;
         }
 
         @media only screen and (max-width: 600px) {
-          .loginboxcont {
+          .boxcont {
             padding-left:30px;    
           }
           
@@ -61,34 +69,21 @@
             padding-right:0px;
           }
 
-          .balon {
-            margin-bottom: 20%;
-          }
-
-          .loginbox {
-            margin: auto;
+          .resetbox {
+            margin-bottom: 10%;
           }
 
           .row {
-            top: 43%;
+            top: 48%;
           }           
 
           html, body {
-            height: 120%;
+            height: 130%;
           }
 
           body  {
             background-repeat:repeat-y;
           }
-        }
-
-        .regbox {
-            display: block;
-            position: relative;
-            top: 10%;
-            margin: auto;
-            margin-bottom: 10%;
-            max-width: 70%;
         }
         .fonthead {
             color:white;
